school-app-181210/force-app/main/default/objects/Student__c/fields/EnrolledDate__c.field-meta.xml
<CustomField>
    <fullName>EnrolledDate__c</fullName>
    <description>The date a student was first enrolled in the school.</description>
    <label>Enrolled Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>