school-app-181210/force-app/main/default/objects/Student__c/fields/GradeLevel__c.field-meta.xml
<CustomField>
    <fullName>GradeLevel__c</fullName>
    <label>Grade Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freshman</fullName>
                <default>true</default>
                <label>Freshman</label>
            </value>
            <value>
                <fullName>Sophomore</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>