school-app-181210/force-app/main/default/objects/Student__c/fields/StudentId__c.field-meta.xml
<CustomField>
    <fullName>StudentId__c</fullName>
    <displayFormat>{YY}{MM}{DD}{0000}</displayFormat>
    <label>Student Id</label>
    <type>AutoNumber</type>
</CustomField>